# CustomCrawler

./: .env.example  .gitignore  ARCHITECTURE_OPTIMIZATION.md  Dockerfile  Makefile  README.md  admin_server.py  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
admin/: __init__.py  api.py  app.py  auth.py  export.py  llm.py  llm_api.py  routes.py  security.py  server.py  utils.py
admin/templates/: audit_log.html  base.html  custom_source_form.html  custom_sources.html  dashboard.html  delete_project.html  edit_project.html  exports.html  login.html  new_project.html  projects.html  settings.html  source_logs.html  sources.html  user_form.html  users.html
analyzer/: dark_horse.py  readme_scorer.py  report_generator.py  trend_analyzer.py
config/: config.py  sources.yaml
generator/: html_generator.py
generator/templates/: index.html
scraper/sources/: __init__.py  base.py  framework.py  github_html.py  github_trending_api.py  hackernews.py  juejin.py  models.py  translator.py
storage/: sqlite_store.py
